ejercicio14/factor.g4
grammar factor;

expr: term ((PLUS | MINUS) term)* ;

term: factor ((MUL | DIV) factor)* ;

factor
    : NUM
    | LPAREN expr RPAREN
    ;

PLUS: '+' ;
MINUS: '-' ;
MUL: '*' ;
DIV: '/' ;
LPAREN: '(' ;
RPAREN: ')' ;
NUM: [0-9]+ ;
WS: [ \t\r\n]+ -> skip ;
